Add search bar to HTML and refactor image fetching logic in JavaScript

--- a/pexels-start.html
+++ b/pexels-start.html
@@ -112,6 +112,15 @@
             </svg>
             <strong>Album</strong>
           </a>
+          <form class="d-flex flex-grow-1 mx-3" id="searchbar" role="search">
+            <input
+              class="form-control me-2"
+              type="text"
+              placeholder="Cerca..."
+              aria-label="Search"
+            />
+            <button class="btn btn-outline-light" type="submit">Cerca</button>
+          </form>
           <button
             class="navbar-toggler"
             type="button"
